--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <br>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Le Corbusier the Architect. History.</h3>
 <br>
-<img alt="autori" src="images/cpj.jpg">
+<img alt="autori" src="http://zadorozhna.github.io/images/cpj.jpg">
 <br>
 <br>
 <p>Charles-Edouard Jeanneret, Le Corbusier (October 6, 1887 - August 27, 1965).</p>
@@ -51,7 +51,7 @@
 
 <h4>LC15 TABLE DE CONFÉRENCE</h4>
 <br>
-<img alt="lc15_reale" src="images/lc15_reale.jpg">
+<img alt="lc15_reale" src="http://zadorozhna.github.io/images/lc15_reale.jpg">
 <br>
 <br>
 <p>
@@ -68,7 +68,7 @@ The circle is a sturdy horizontal tabletop in oak and the cube is made of steel 
 </p>
 
 <br>
-<img alt="lc15_collage" src="images/collage_lc15.jpg">
+<img alt="lc15_collage" src="http://zadorozhna.github.io/images/collage_lc15.jpg">
 <br>
 <br>
 
@@ -95,7 +95,7 @@ var curveLeft1 = STRUCT([curve1, curve2]);
 </code></pre>
 
 <br>
-<img alt="component_lc15" src="images/component_lc15.png">
+<img alt="component_lc15" src="http://zadorozhna.github.io/images/component_lc15.png">
 <br>
 <br>
 
@@ -110,7 +110,7 @@ The resulting designs were of great intellectual value and considerable commerci
 
 <h4>CASIERS STANDARD</h4>
 <br>
-<img alt="casiers_reale" src="images/casiers_reale.jpg">
+<img alt="casiers_reale" src="http://zadorozhna.github.io/images/casiers_reale.jpg">
 <br>
 <br>
 <p>
@@ -125,7 +125,7 @@ Collection: LE CORBUSIER
 Storage units are connected by screws to obtain multiple different configurations. Lay on the floor, overlapping each other or suspended on pilotis. Closed totally, partially or per day. Sliding doors, blinds vertical or horizontal flaps and upper or lower: all available in different colors.
 </p>
 <br>
-<img alt="casiers_collage" src="images/collage_casiers.jpg">
+<img alt="casiers_collage" src="http://zadorozhna.github.io/images/collage_casiers.jpg">
 <br>
 <br>
 
@@ -162,13 +162,13 @@ var support1 = STRUCT([T([0,1,2])([4.25,0.6,1])(R([1,2])(-PI/2)(c1)),T([0,1,2])(
 </code></pre>
 
 <br>
-<img alt="component_casiers" src="images/component_casiers.png">
+<img alt="component_casiers" src="http://zadorozhna.github.io/images/component_casiers.png">
 <br>
 <br>
 
 <h4>LC13</h4>
 <br>
-<img alt="lc13_reale" src="images/lc13_reale.jpg">
+<img alt="lc13_reale" src="http://zadorozhna.github.io/images/lc13_reale.jpg">
 <br>
 <br>
 <p>
@@ -187,7 +187,7 @@ Produced under license from the Foundation Le Corbusier and so indicated by a st
 </p>
 
 <br>
-<img alt="lc13_collage" src="images/collage_lc13.jpg">
+<img alt="lc13_collage" src="http://zadorozhna.github.io/images/collage_lc13.jpg">
 <br>
 <br>
 
@@ -227,13 +227,13 @@ var supportStructure = STRUCT([curveSupport1,curveSupport2,curveSupport3,curveSu
 </code></pre>
 
 <br>
-<img alt="component_lc13" src="images/component_lc13.png">
+<img alt="component_lc13" src="http://zadorozhna.github.io/images/component_lc13.png">
 <br>
 <br>
 
 <h4>LC1 VILLA CHURCH</h4>
 <br>
-<img alt="lc1_reale" src="images/lc1_villa_church_reale.jpg">
+<img alt="lc1_reale" src="http://zadorozhna.github.io/images/lc1_villa_church_reale.jpg">
 <br>
 <br>
 <p>
@@ -254,7 +254,7 @@ Produced under the license from the Foundation Le Corbusier and so indicated by 
 </p>
 
 <br>
-<img alt="lc1_collage" src="images/collage_lc1.jpg">
+<img alt="lc1_collage" src="http://zadorozhna.github.io/images/collage_lc1.jpg">
 <br>
 <br>
 
@@ -298,7 +298,7 @@ var peakStruct = STRUCT([T([1,2])([5.65,0.6])(surface1),T([0,1,2])([6.5,5.65,0.6
 </code></pre>
 
 <br>
-<img alt="component_lc1" src="images/component_lc1.png">
+<img alt="component_lc1" src="http://zadorozhna.github.io/images/component_lc1.png">
 <br>
 <br>
     
