--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <br>
         <p>Student: Anastasiya Zadorozhna</p>
         <p>Student ID: 418276</p>
-        <p class="view"><a href="https://github.com/cvdlab-cg/418276/final-project">View the Project on GitHub <small>zadorozhna</small></a></p>
+        <p class="view"><a href="">View the Project on GitHub <small>zadorozhna</small></a></p>
         <ul>
-          <li class="single"><a href="">View On <strong>GitHub</strong></a></li>
+          <li class="single"><a href="https://github.com/cvdlab-cg/418276/final-project">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
